💄 fix: dark mode background color (#275)

--- a/udong-frontend/styles/globals.css
+++ b/udong-frontend/styles/globals.css
@@ -26,8 +26,8 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
 }
 
